--- a/java-programming.org
+++ b/java-programming.org
@@ -75,4 +75,10 @@
     + 方法默认是public
     + 考虑使用成员变量时，考虑采用抽象类
 *** 内部类
+** 传递对象
+*** 克隆
+       + 类设置为final，无法clone
+** 多线程
+*** Thread
+*** Threadable： 可以被多个线程复用
 
